# com.castsoftware.uc.action-plan

./: .gitignore  README.MD  README.md  action-plan.bat  action_plan.py  config.json  config.py  install.bat  main.py  pyproject.toml  readme.docx  requirements.txt  rules.xlsx  setup.py
cast_action_plan/: action_plan.py  config.py  main.py  rules.xlsx
